rs/ethexe/macros-tests/tests/snapshots/program_insta__generates_init_for_multiple_ctors.snap
---
source: macros-tests/tests/program_insta.rs
expression: result
---
impl MyProgram {
    pub async fn create(p1: u32, p2: String) -> Self {
        Self { p1, p2 }
    }
    pub fn new2(p2: String, p1: u32) -> Self {
        Self { p1, p2 }
    }
}
impl sails::meta::ProgramMeta for MyProgram {
    type ConstructorsMeta = meta_in_program::ConstructorsMeta;
    const SERVICES: &'static [(&'static str, sails::meta::AnyServiceMeta)] = &[];
    const ASYNC: bool = true;
}
mod meta_in_program {
    use super::*;
    sails::invocation_io!(
        pub struct __CreateParams { pub (super) p1 : u32, pub (super) p2 : String, },
        entry_id = 0u16,
    );
    sails::invocation_io!(
        pub struct __New2Params { pub (super) p2 : String, pub (super) p1 : u32, },
        entry_id = 1u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum ConstructorsMeta {
        Create(__CreateParams),
        New2(__New2Params),
    }
}
impl sails::solidity::ProgramSignature for MyProgram {
    const CTORS: &'static [sails::solidity::MethodExpo] = &[
        (
            sails::meta::InterfaceId::zero(),
            0u16,
            "create",
            <<(
                bool,
                u32,
                String,
            ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
            <<(
                sails::alloy_primitives::B256,
            ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
        ),
        (
            sails::meta::InterfaceId::zero(),
            1u16,
            "new2",
            <<(
                bool,
                String,
                u32,
            ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
            <<(
                sails::alloy_primitives::B256,
            ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
        ),
    ];
    const SERVICES: &'static [sails::solidity::ServiceExpo] = &[];
    const METHODS_LEN: usize = 0;
}
const __CTOR_SIGS: [[u8; 4]; <MyProgram as sails::solidity::ProgramSignature>::CTORS
    .len()] = sails::solidity::ConstProgramMeta::<MyProgram>::ctor_sigs();
const _: () = sails::solidity::assert_unique_selectors(&__CTOR_SIGS);
const __CTOR_CALLBACK_SIGS: [[u8; 4]; <MyProgram as sails::solidity::ProgramSignature>::CTORS
    .len()] = sails::solidity::ConstProgramMeta::<MyProgram>::ctor_callback_sigs();
const __METHOD_SIGS: [[u8; 4]; <MyProgram as sails::solidity::ProgramSignature>::METHODS_LEN] = sails::solidity::ConstProgramMeta::<
    MyProgram,
>::method_sigs();
const _: () = sails::solidity::assert_unique_selectors(&__METHOD_SIGS);
const __METHOD_ROUTES: [(
    sails::meta::InterfaceId,
    u16,
    u8,
); <MyProgram as sails::solidity::ProgramSignature>::METHODS_LEN] = sails::solidity::ConstProgramMeta::<
    MyProgram,
>::method_routes();
const __CALLBACK_SIGS: [[u8; 4]; <MyProgram as sails::solidity::ProgramSignature>::METHODS_LEN] = sails::solidity::ConstProgramMeta::<
    MyProgram,
>::callback_sigs();
#[cfg(target_arch = "wasm32")]
pub mod wasm {
    use super::*;
    use sails::{gstd, hex, prelude::*};
    static mut PROGRAM: Option<MyProgram> = None;
    #[unsafe(no_mangle)]
    extern "C" fn init() {
        let mut input: &[u8] = &gstd::msg::load_bytes().expect("Failed to read input");
        if let Some(input_sig) = input.get(..4)
            && let Ok(sig) = <[u8; 4]>::try_from(input_sig)
            && let Some(idx) = __CTOR_SIGS.iter().position(|s| s == &sig)
            && let Some(encode_reply) = match_ctor_solidity(
                <MyProgram as sails::solidity::ProgramSignature>::CTORS[idx].1,
                &input[4..],
            )
        {
            if encode_reply {
                let output = [
                    __CTOR_CALLBACK_SIGS[idx].as_slice(),
                    gstd::msg::id().into_bytes().as_slice(),
                ]
                    .concat();
                gstd::msg::reply_bytes(output, 0).expect("Failed to send output");
            }
            return;
        }
        if let Ok(header) = <sails::meta::SailsMessageHeader as sails::Decode>::decode(
            &mut input,
        ) {
            if header.interface_id() != sails::meta::InterfaceId::zero() {
                sails::gstd::unknown_input_panic(
                    "Non zero ctor interface_id",
                    header.to_bytes().as_slice(),
                );
            }
            match header.entry_id() {
                0u16 => {
                    let (p1, p2): (u32, String) = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                        .unwrap_or_else(|_| sails::gstd::unknown_input_panic(
                            "Unknown request",
                            input,
                        ));
                    #[cfg(target_arch = "wasm32")]
                    if sails::gstd::msg::value() > 0 {
                        core::panic!("'create' accepts no value");
                    }
                    sails::program_ctor!(
                        PROGRAM = MyProgram::create(p1, p2). await, params_struct =
                        meta_in_program::__CreateParams
                    )
                }
                1u16 => {
                    let (p2, p1): (String, u32) = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                        .unwrap_or_else(|_| sails::gstd::unknown_input_panic(
                            "Unknown request",
                            input,
                        ));
                    #[cfg(target_arch = "wasm32")]
                    if sails::gstd::msg::value() > 0 {
                        core::panic!("'new2' accepts no value");
                    }
                    sails::program_ctor!(
                        PROGRAM = MyProgram::new2(p2, p1), params_struct =
                        meta_in_program::__New2Params
                    )
                }
                _ => sails::gstd::unknown_input_panic("Unexpected ctor entry_id", input),
            }
        }
    }
    fn match_ctor_solidity(entry_id: u16, input: &[u8]) -> Option<bool> {
        match entry_id {
            0u16 => {
                let (
                    __encode_reply,
                    p1,
                    p2,
                ): (
                    bool,
                    <<u32 as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::RustType,
                    <<String as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::RustType,
                ) = sails::alloy_sol_types::SolValue::abi_decode_params(input)
                    .expect("Failed to decode request");
                #[cfg(target_arch = "wasm32")]
                if sails::gstd::msg::value() > 0 {
                    core::panic!("'create' accepts no value");
                }
                gstd::message_loop(async move {
                    let program = MyProgram::create(p1.into(), p2.into()).await;
                    unsafe { PROGRAM = Some(program) };
                });
                Some(__encode_reply)
            }
            1u16 => {
                let (
                    __encode_reply,
                    p2,
                    p1,
                ): (
                    bool,
                    <<String as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::RustType,
                    <<u32 as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::RustType,
                ) = sails::alloy_sol_types::SolValue::abi_decode_params(input)
                    .expect("Failed to decode request");
                #[cfg(target_arch = "wasm32")]
                if sails::gstd::msg::value() > 0 {
                    core::panic!("'new2' accepts no value");
                }
                let program = MyProgram::new2(p2.into(), p1.into());
                unsafe { PROGRAM = Some(program) };
                Some(__encode_reply)
            }
            _ => None,
        }
    }
    const SERVICES_COUNT: usize = 0usize;
    const INTERFACE_IDS: &'static [(sails::meta::InterfaceId, u8)] = &sails::meta::interface_ids::<
        SERVICES_COUNT,
    >(&[]);
    #[unsafe(no_mangle)]
    extern "C" fn handle() {
        let mut input = gstd::msg::load_bytes().expect("Failed to read input");
        let program_ref = unsafe { PROGRAM.as_ref() }.expect("Program not initialized");
        if let Some(input_sig) = input.get(..4)
            && let Ok(sig) = <[u8; 4]>::try_from(input_sig)
            && let Some(idx) = __METHOD_SIGS.iter().position(|s| s == &sig)
        {
            let (interface_id, entry_id, route_idx) = __METHOD_ROUTES[idx];
        }
        if let Ok(header) = <sails::meta::SailsMessageHeader as sails::Decode>::decode(
            &mut input.as_slice(),
        ) {
            let header_len = header.hlen().inner() as usize;
            let (interface_id, route_id, entry_id) = header
                .try_match_interfaces(INTERFACE_IDS)
                .expect("Failed to find matching service")
                .into_inner();
            match route_id {
                _ => gstd::unknown_input_panic("Unknown route_id", &[route_id]),
            }
        }
    }
    #[unsafe(no_mangle)]
    extern "C" fn handle_reply() {
        use sails::meta::ProgramMeta;
        if MyProgram::ASYNC {
            gstd::handle_reply_with_hook();
        }
    }
}
